# permafrostanalytics

./: .gitignore  LICENSE  README.md  SLURM.txt  env.yml  pyproject.toml  requirements
christian/: testing.ipynb
convert/: generate_filestructure.py
convert/NConvert/: Plugins.txt  ReadMe.txt
data/2017-01-04 16:00:00/: precipitation_data.csv
data/2017-02-02 07:00:00/: precipitation_data.csv
data/2017-02-03 00:00:00/: precipitation_data.csv
data/normal/: precipitation_data.csv
ideas/: presentation.pptx
ideas/RecognIce/: Submission.odp
ideas/annotation/: README.md  images.py  timeseries.py
ideas/benno/: sunlight.ipynb  utils.py
ideas/benno/.ipynb_checkpoints/: sunlight-checkpoint.ipynb
ideas/eternal_sunshine/benno/: utils.py
ideas/eternal_sunshine/christian/: README.md  batchnorm_layer.py  regression_dataset.py  resnet.py  simple_bn_generator.py  testing.ipynb  train.py
ideas/group_seis_matters/: LICENSE  calculate_cluster_means.ipynb  image_clustering.py
ideas/image_binary_search/: load_image.py  pos.p
ideas/machine_learning/: README.md  classification.py  datasets.py  image_classifier.py  models.py
ideas/matterscout/: anomaly_detection.py  anomaly_visualization.py  app.js  feature_extraction.py  package-lock.json  package.json
ideas/permaWarp/: permaWarp1Slide.ppt
ideas/project_water_detection/: README.md
ideas/team_aroma/: PCAKmeans.py  app.py  colorfilter.py  presentation.pptx  ssim_exploration.py
ideas/timeseries_prediction/: README.md  timeseries_prediction.py
ideas/tos/: dodo.py  requirements
ideas/visualization/: plot_spectrogram.py  plot_timeseries.py  plot_timeseries_weather.py
ideas/water_detection/: LICENSE  README.md
ideas/weather/: weather.py
ideas/ymca/: SARIMA_2.html
notebooks/: create_3labels.ipynb  create_labels.ipynb  extract_time_series.ipynb  labels_rain_resist.csv  lw_classifier.ipynb  lw_readme  pd_time_stamps.pkl  pd_time_stamps_summerdays.pkl  timeseries_analysis.ipynb
tutorial/: azure_integration.py  howto_stuett.py
utils/: download_files.py  merge_annotations.py
(+44 files in other folders)
