[tool.poetry]
name = "permafrostanalytics"
version = "0.1.0"
description = "Examples and tutorials for the Permafrost Hackathon"

license = "MIT"

authors = [
    "Matthias Meyer <matthias.meyer@tik.ee.ethz.ch>"
]

readme = 'README.md'  # Markdown files are supported

repository = "https://gitlab.ethz.ch/tec/public/employees/matthias-meyer/permafrostanalytics"
homepage = "permasense.ch"

keywords = ['data analysis', 'data processing']

[tool.poetry.dependencies]
python = "^3.7"  # Compatible python versions must be declared here
toml = "^0.9"

# Dependencies with extras
stuett = { git = "https://gitlab.ethz.ch/tec/public/employees/matthias-meyer/stuett.git"}
azure-storage-blob = "2.1.0"
wget = "^3.2"
plotly = "^4.3.0"
flask_caching = "^1.7.2"
dash-canvas = {git = "https://github.com/niowniow/dash-canvas" }
tqdm = "^4.39.0"
tensorboard = "^2.0.2"
pyignite = "^0.3.4"

# Optional dependencies (extras)

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.4"
black = {version = "^19.10b0", allows-prereleases = true}
flake8 = "^3.7.9"
